2006-08-11  David Edelsohn  <edelsohn@gnu.org>

	* gfortran.dg/direct_io_6.f90: Skip on *-*-aix*.

2006-08-11  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* g++.dg/opt/pr23454-2.C: New test.

2006-08-11  Richard Guenther  <rguenther@suse.de>

	PR middle-end/28651
	* gcc.c-torture/execute/pr28651.c: New testcase.

2006-08-10  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/static_initializer.ads: New test.

2006-08-10  Paul Brook  <paul@codesourcery.com>

	* gcc.target/arm/cond-asm.c: New test.

2006-08-10  Dorit Nuzman  <dorit@il.ibm.com>

	PR tree-optimization/26197
	* g++.dg/vect/param-max-aliased-pr26197.cc: New test.
	* g++.dg/vect/vect.exp: Compile the new tests with
	--param max-aliased-vops=0.

2006-08-09  Lee Millward  <lee.millward@codesourcery.com>

	PR c++/28637
	* g++.dg/template/void3.C: New test.

	PR c++/28638
	* g++.dg/template/void4.C: New test.

	PR c++/28640
	* g++.dg/template/void5.C: New test.
	
2006-08-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* g++.dg/ext/visibility/class1.C (dg-require-visibility): Move
	after dg-do compile.

2006-08-07  Victor Kaplansky <victork@il.ibm.com>

	PR tree-optimizations/26969
	* gcc.dg/vect/vect.exp: Compile tests prefixed with
	"unswitch-loops" with -funswitch-loops.
	* gcc.dg/vect/unswitch-loops-pr26969.c: New test.

2006-08-07  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/sparc-getcontext-1.c: Fix typo.
	* g++.dg/eh/spbp.C: Skip on Solaris 2.5.1 and 2.6 too.
	* g++.dg/other/unused1.C: Likewise.  Also match "asci?z".
	* objc.dg/dwarf-1.m: Likewise.
	* objc.dg/dwarf-2.m: Likewise.
	* obj-c++.dg/dwarf-2.mm: Likewise.

2006-08-06  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* objc.dg/dwarf-1.m: Skip on 32-bit hppa hpux.
	* objc.dg/dwarf-2.m: Likewise.
	* obj-c++.dg/dwarf-2.mm: Likewise.

	PR libfortran/28603
	* gfortran.dg/direct_io_6.f90: Skip on hppa*-*-hpux*.

	PR testsuite/27611
	* g++.dg/other/unused1.C: Skip on hppa*-*-hpux* if not hppa*64*-*-*.

	PR testsuite/27033