@@ -20,7 +20,7 @@
   end if
 
   call chmod (n, "a-w", i)
-  if (i == 0) then
+  if (i == 0 .and. getuid() /= 0) then
     if (access(n,"w") == 0 .or. access(n,"W") == 0) call abort
   end if
 
