@@ -15,7 +15,7 @@
   if (r1 /= 0 .or. r2 /= 0 .or. r3 /= 0) call abort
   if (any (s1 /= s2) .or. any (s1 /= s3)) call abort
   if (s1(5) /= getuid()) call abort
-  if (s1(6) /= getgid()) call abort
+  if (s1(6) /= getgid() .and. getgid() /= 0) call abort
   if (s1(8) < 3 .or. s1(8) > 5) call abort
 
   close (10,status="delete")
